# TuyaOpenClaw

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Kconfig  README.md  README_zh.md  TODOs.md
.github/workflows/: build_t5ai_xiaozhi.yml  check-build.yml  release.yml  sync-to-gitee.yml
IM/: Kconfig
IM/channels/: discord_bot.c  feishu_bot.c  qqbot_channel.c  telegram_bot.c  weixin_bot.c
agent/: Kconfig  agent_loop.c  agent_loop.h  context_builder.c
ai_components/: CMakeLists.txt  Kconfig
ai_components/ai_agent/: CMakeLists.txt
ai_components/ai_agent/src/: ai_agent.c
ai_components/ai_audio/: CMakeLists.txt  Kconfig
ai_components/ai_audio/src/: ai_audio_input.c  ai_audio_player.c
ai_components/ai_main/include/: ai_chat_main.h
ai_components/ai_main/src/: ai_chat_main.c  ai_chat_ui.c
ai_components/ai_mcp/: CMakeLists.txt
ai_components/ai_mcp/include/: ai_mcp_server.h
ai_components/ai_mcp/src/: ai_mcp_server.c  ai_mcp_tools.c
ai_components/ai_mode/include/: ai_manage_mode.h
ai_components/ai_mode/src/: ai_mode_free.c  ai_mode_hold.c  ai_mode_oneshot.c  ai_mode_wakeup.c
ai_components/ai_picture/: CMakeLists.txt  Kconfig
ai_components/ai_picture/include/: ai_picture.h  ai_picture_input.h  ai_picture_output.h
ai_components/ai_picture/src/: ai_picture.c  ai_picture_input.c  ai_picture_output.c
ai_components/ai_skills/include/: ai_skill.h
ai_components/ai_skills/src/: ai_skill.c
ai_components/ai_ui/: CMakeLists.txt  Kconfig
ai_components/ai_ui/assets/: png_to_lvgl_icon_c.py
ai_components/ai_ui/font/: AlibabaPuHuiTi3_Regular16.c  AlibabaPuHuiTi3_Regular18_Static.c  AlibabaPuHuiTi3_Regular40.c  font_awesome_symbols.h
ai_components/ai_ui/icon/v8/: add_img.c  ai_camera_off.c  ai_camera_on.c  ai_icon.c  alarm_app.c  arrow_black.c  arrow_right.c  arrow_white.c  arrow_yellow.c  back_24_24.c  battery_icon.c  brightness.c  calendar.c  calendar_app.c  camera_app.c  choose.c  clock.c  clock_app.c  clock_vol.c  delete.c  file_app.c  icon_dog.c  network_30_30.c  photo_app.c  point_1.c  point_2.c  printer_app.c  record_app.c  settings_app.c  tuya_app_qr.c  up.c  volume.c  weather.c  weather_app.c  wifi_24_24.c  wifi_30_30.c
ai_components/ai_ui/icon/v9/: add_img.c  ai_camera_off.c  ai_camera_on.c  ai_icon.c  alarm_app.c  arrow_black.c  arrow_right.c  arrow_white.c  arrow_yellow.c  back_24_24.c  battery_icon.c  brightness.c  calendar.c  calendar_app.c  camera_app.c  choose.c  clock.c  clock_app.c  clock_vol.c  delete.c  file_app.c  icon_dog.c  network_30_30.c  photo_app.c  point_1.c  point_2.c  printer_app.c  record_app.c  settings_app.c  tuya_app_qr.c  up.c  volume.c  weather.c  weather_app.c  wifi_24_24.c  wifi_30_30.c
ai_components/ai_ui/include/: ai_ui_camera.h  ai_ui_chat_xiaozhi.h  ai_ui_image_album.h  ai_ui_manage.h  ai_ui_page.h  ai_ui_standby_face.h
ai_components/ai_ui/src/: ai_ui_camera.c  ai_ui_chat_xiaozhi.c  ai_ui_image_album.c  ai_ui_manage.c  ai_ui_page.c  ai_ui_standby_face.c  ai_ui_stream_text.c
ai_components/ai_ui/src/chatbot/: ai_ui_chat_chatbot.c
ai_components/ai_ui/src/oled/: ai_ui_chat_oled.c
ai_components/ai_ui/src/wechat/: ai_ui_chat_wechat.c  ai_ui_wechat_album.c  ai_ui_wechat_camera.c  ai_ui_wechat_chat.c  ai_ui_wechat_common.h
ai_components/ai_video/: CMakeLists.txt
ai_components/ai_video/include/: ai_video_input.h
ai_components/ai_video/src/: ai_video_input.c
ai_components/assets/: CMakeLists.txt
ai_components/assets/include/: lang_config.h
ai_components/assets/language/en-US/: language.json
ai_components/assets/language/zh-CN/: language.json
ai_components/utility/include/: ai_user_event.h
components/lua/: CMakeLists.txt  Kconfig
components/lua/include/: luaconf.h
components/lua/modules/delay/: lua_module_delay.c  lua_module_delay.h
components/lua/modules/gpio/: lua_module_gpio.c  lua_module_gpio.h
components/lua/port/: linit_sandbox.c  lua_module_os_safe.c  lua_module_registry.c  lua_runtime.c
components/lua/port_include/: lua_module_registry.h  lua_runtime.h
config/: ATK_T5AI_MINI_BOARD_2.4LCD_CAMERA.config  DshanPi_A1.config  ESP32S3_BREAD_COMPACT_WIFI.config  TUYA_T5AI_BOARD_LCD_3.5_CAMERA(NO_SDCARD).config  TUYA_T5AI_BOARD_LCD_3.5_CAMERA(NO_SDCARD_CAMERA).config  TUYA_T5AI_BOARD_LCD_3.5_CAMERA.config  TUYA_T5AI_CORE.config  Ubuntu.config  WAVESHARE_T5AI_TOUCH_AMOLED_1_75.config  XTEINK_X4.config
cron_service/: cron_service.c  cron_service.h
docs/: lua-module-porting.md
docs/skills/: lua_delay.md  lua_gpio.md  lua_run.md
gateway/: Kconfig  acp_client.c  acp_client.h  ws_server.c  ws_server.h
heartbeat/: heartbeat.c  heartbeat.h
include/: app_base_config.h  tuya_app_config.h  tuya_app_config_secrets.h.example  tuyaopen_claw_chat.h
memory/: memory_manager.c  memory_manager.h  session_manager.c  session_manager.h
overlay/ai_components/ai_agent/src/: ai_agent.c
overlay/ai_components/ai_audio/src/: ai_audio_input.c
overlay/ai_components/ai_main/src/: ai_chat_main.c
overlay/ai_components/ai_mcp/src/: ai_mcp_server.c
skills/: skill_loader.c  skill_loader.h
src/: app_cli_cmd.c  ducky_claw_chat.c  tuya_app_main.c  tuyaopen_claw_chat.c
tools/: Kconfig  tool_cron.c  tool_cron.h  tool_exec.c  tool_exec.h  tool_files.c  tool_files.h  tool_hw.c  tool_hw.h  tool_lua.c  tool_lua.h  tools_register.c
